fixed z-index header & fix company height

--- a/css/style.css
+++ b/css/style.css
@@ -44,14 +44,14 @@ hr {
   display: flex;
   justify-content: space-between;
 
+  padding: 25px 0;
   width: 100%;
 }
 .column {
-  width: 30%;
-  gap: 10em;
-  /* debug */
-  min-height: 100px;
   border: 1px solid gray;
+  /* debug */
+  width: 30%;
+  min-height: 100px;
 }
 
 .header-column {
@@ -61,8 +61,18 @@ hr {
   border-bottom: 1px solid gray;
 }
 
-.detalist-plan {
-  padding: 25px;
+input[type="radio"] {
+  margin-right: 3px;
+  margin-bottom: 30px;
+}
+
+.radio-uno,
+.radio-due {
+  font-size: 0.8rem;
+}
+
+.radio-uno {
+  margin-right: 60px;
 }
 
 .main-column > h3 {
@@ -84,6 +94,14 @@ hr {
   padding: 9px 0;
 
   text-align: center;
+}
+
+.short-line {
+  height: 40px;
+  width: 50px;
+  margin-top: 40px;
+
+  border-top: 1px solid gray;
 }
 
 .advantages > span {
@@ -109,6 +127,7 @@ hr {
 header {
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 
 .header {
@@ -202,6 +221,10 @@ header {
   background-color: white;
 }
 
+.radio {
+  display: flex;
+}
+
 .container-main > h2 {
   font-size: 2rem;
   margin-bottom: 50px;
@@ -258,7 +281,7 @@ header {
 .company {
   display: flex;
   /* debug */
-  height: 500px;
+  height: calc(100vw / 3);
 }
 
 /* -- */
@@ -267,7 +290,7 @@ header {
   display: flex;
   flex-wrap: wrap;
 
-  width: calc(100% / 3);
+  width: calc(100vw / 3);
   height: 100%;
   /* debug */
   background-color: aqua;
@@ -275,7 +298,7 @@ header {
 
 .company-center {
   height: 100%;
-  width: calc(100% / 3);
+  width: calc(100vw / 3);
 
   /* debug */
   background-color: bisque;
@@ -286,7 +309,7 @@ header {
   display: flex;
   flex-wrap: wrap;
 
-  width: calc(100% / 3);
+  width: calc(100vw / 3);
   height: 100%;
 
   /* debug */
